--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -1,31 +1,33 @@
 <div class="homepage-hero js-section-animation">
-  <div class="homepage-hero__content">
-    <h1>
-      {% if title_1 %}
-          <span class="title--first">{{ title_1 }}</span>
+  <div class="homepage-hero__container">
+    <div class="homepage-hero__content">
+      <h1>
+        {% if title_1 %}
+            <span class="title--first">{{ title_1 }}</span>
+        {% endif %}
+        {% if title_2 %}
+          <span class="title--middle">{{ title_2 }}</span>
+        {% endif %}
+        <span class="title--last">{{ title_3 }}</span>
+      </h1>
+      {% if subtitle %}
+      {% include "@atoms/02-text/00-headings/_heading.twig" with {
+        "heading_level": 2,
+        "heading": subtitle,
+        "heading_base_class": "hero_subtitle",
+      } %}
       {% endif %}
-      {% if title_2 %}
-        <span class="title--middle">{{ title_2 }}</span>
-      {% endif %}
-      <span class="title--last">{{ title_3 }}</span>
-    </h1>
-    {% if subtitle %}
-    {% include "@atoms/02-text/00-headings/_heading.twig" with {
-      "heading_level": 2,
-      "heading": subtitle,
-      "heading_base_class": "hero_subtitle",
-    } %}
-    {% endif %}
-    <form class="homepage-hero__content__form">
-      {% include "@molecules/autocomplete-dropdown/autocomplete.twig" %}
-      <button class="button button--primary" type="submit">Search Providers</button>
-    </form>
-  </div>
-  <div class="homepage-hero__image">
-    {% include "@molecules/image-background/image-background.twig" with {
-      "img.src": img.src,
-      "img.src": img.alt,
-      "classes": classes,
-    } %}
+      <form class="homepage-hero__content__form">
+        {% include "@molecules/autocomplete-dropdown/autocomplete.twig" %}
+        <button class="button button--primary" type="submit">Search Providers</button>
+      </form>
+    </div>
+    <div class="homepage-hero__image">
+      {% include "@molecules/image-background/image-background.twig" with {
+        "img.src": img.src,
+        "img.src": img.alt,
+        "classes": classes,
+      } %}
+    </div>
   </div>
 </div>
