--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -1,5 +1,6 @@
 {% embed "@templates/_default.twig" with {
-  full_width: true
+  full_width: true,
+  page_header: false
 } %}
   {% block page_content %}
     
