TH-284 on my way callout markup

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-with-callout/_image-with-callout.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-with-callout/_image-with-callout.scss
@@ -46,7 +46,7 @@
         padding: 4em;
       }
 
-      a {
+      a.button {
 
         @include breakpoint($bp2) {
           position: absolute;
