--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.twig
@@ -34,7 +34,7 @@
       img: image_callout.img,
       title: image_callout.title,
       text: image_callout.text,
-      link: image_callout.link,
+      links: image_callout.links,
     } %}
   {% endblock %}
 
