--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/image-teaser-banner.twig
@@ -1,8 +1,8 @@
-<div class="image-callout js-section-animation">
-  <div class="image-callout__image">
+<div class="image-teaser js-section-animation">
+  <div class="image-teaser__image">
     <img src="{{ img.src }}" alt="{{ img.alt }}"/>
   </div>
-  <div class="image-callout__text">
+  <div class="image-teaser__text">
     <div class="button-wrapper">
       <h3>{{ title }}</h3>
       <p>{{ text }}</p>
