fix some calc formulas and adjust the sizes of images

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -61,7 +61,7 @@
   
   @include breakpoint($bp5) {
     &::after {
-      right: calc(((100vw - 1350px) / -2 ) - 38px);
+      right: calc(((100vw - 1350px) / -2 ) - 1.5em);
     }
   }
 }
