--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -31,7 +31,7 @@ $base-font-size: 16px; // The font size set on the root html element.
 $base-line-height: 24px; // This line-height determines the basic unit of vertical rhythm.
 
 // TYPE SCALE
-
+$hero-heading: 3 * $base-font-size;
 $xxxl-heading: 2.75 * $base-font-size;
 $xxl-heading: 2.25 * $base-font-size;
 $xl-heading: 2 * $base-font-size;
