--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -43,7 +43,7 @@
   }
   
   @include breakpoint($bp5) {
-    padding: 4em 0;
+    padding: 4em 0 0 2em;
   }
 }
 
@@ -62,6 +62,10 @@
   
   @include breakpoint($bp3) {
     @include adjust-font-size-to($xxxl-heading, 1.75);
+  }
+  
+  @include breakpoint($bp5) {
+    @include adjust-font-size-to($hero-heading, 1.95);
   }
   
   span {
