--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -11,7 +11,7 @@
 
   @include breakpoint($bp3) {
     padding: 0;
-    margin: 4.5em auto 3em;
+    margin: 3em auto 3em;
   }
   
   @include breakpoint(1050px) {
@@ -54,9 +54,9 @@
   }
 
   @include breakpoint($bp3) {
-    width: 100%;
+    width: 80%;
     margin-top: 0;
-    padding-right: 50%;
+    padding-right: 28%;
     box-shadow: none;
     position: static;
     border-radius: 8px;
@@ -64,7 +64,7 @@
 
   @include breakpoint($bp4) {
     width: 80%;
-    padding: 2.5em 34% 2.5em 2em;
+    padding: 2.25em 34% 2.25em 2em;
   }
 
   h1 {
@@ -78,6 +78,10 @@
     
     @include breakpoint($bp3) {
       @include adjust-font-size-to($xxxl-heading, 1.75);
+    }
+    
+    @include breakpoint($bp5) {
+      @include adjust-font-size-to($hero-heading, 1.95);
     }
 
     span {
@@ -149,7 +153,7 @@
     z-index: auto;
     right: 0;
     left: 53%;
-    top: -3.25em;
+    top: -1.5em;
     width: auto;
 
     .image-background {
