--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/_cta-banner.scss
@@ -18,7 +18,7 @@
 
   @include breakpoint($bp4) {
     margin-top: 3em;
-    margin-bottom: 0;
+    margin-bottom: .5em;
   }
 
   @include breakpoint($bp5) {
