--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/_location.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/_location.scss
@@ -6,4 +6,17 @@
     flex-wrap: nowrap;
     justify-content: space-between;
   }
+
+  .menu--inner {
+    display: flex;
+    width: 100%;
+
+    @include breakpoint($bp3) {
+      width: 50%;
+    }
+
+    @include breakpoint($bp4) {
+      width: 33%;
+    }
+  }
 }
