--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -68,6 +68,22 @@
       }
     }
 
+    .breadcrumbs {
+      top: -10px;
+
+      @include breakpoint($bp2) {
+        top: -20px;
+      }
+
+      @include breakpoint($bp3) {
+        top: -200px;
+      }
+
+      @include breakpoint($bp5) {
+        top: -250px;
+      }
+    }
+
     .location-label {
       position: absolute;
       top: 2em;
